# Skeleton

./: .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSES.md  README.md  build.sh  getLibs.sh  osx.cmake  version.sh  windows.cmake
.github/workflows/: build-android.yml  build-linux.yml  build-macos.yml  build-windows.yml  butler-release.yml  release.yml
android/: app.prop  build.gradle  local.properties  settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/androidTest/java/app/jerboa/skeleton/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  main.cpp
android/app/src/main/java/app/jerboa/skeleton/: Hop.kt  MainActivity.kt
android/app/src/main/java/app/jerboa/skeleton/composable/: about.kt  menuPrompt.kt  renderScreen.kt  socials.kt
android/app/src/main/java/app/jerboa/skeleton/data/: GameState.kt
android/app/src/main/java/app/jerboa/skeleton/onlineServices/: Achievements.kt  Client.kt  InAppReview.kt  LeaderBoard.kt
android/app/src/main/java/app/jerboa/skeleton/ui/theme/: Color.kt  Shape.kt  Theme.kt  Type.kt
android/app/src/main/java/app/jerboa/skeleton/ui/view/: GLRenderer.kt  GLView.kt
android/app/src/main/java/app/jerboa/skeleton/utils/: glUtils.kt
android/app/src/main/java/app/jerboa/skeleton/viewmodel/: Event.kt  renderViewModel.kt
android/app/src/main/res/drawable/: games_achievements.xml  games_leaderboards.xml  ic_launcher_foreground.xml  logo.xml  menu.xml  menu_dimiss.xml
android/app/src/main/res/values/: achievements.xml  strings.xml  themes.xml
android/app/src/test/java/app/jerboa/skeleton/: ExampleUnitTest.kt
android/gradle/wrapper/: gradle-wrapper.properties
common/: common.cpp  common.h  replace.sh
common/macos/: Info.plist  icon.icns
common/windows/: CMakeLists.txt  versioninfo.rc.in
desktop/: CMakeLists.txt
desktop/include/: desktop.h
desktop/src/: main.cpp
