set(CMAKE_RC_COMPILER "x86_64-w64-mingw32-windres")

file(READ versioninfo.rc.in FILE_CONTENTS)
string(REPLACE "_COMPANY_" "${COMPANY}" FILE_CONTENTS "${FILE_CONTENTS}")
string(REPLACE "_PRODUCT_NAME_" "${PRODUCT_NAME}" FILE_CONTENTS "${FILE_CONTENTS}")
string(REPLACE "_DESCRIPTION_" "${DESCRIPTION}" FILE_CONTENTS "${FILE_CONTENTS}")
string(REPLACE "_COPYRIGHT_" "${COPYRIGHT}" FILE_CONTENTS "${FILE_CONTENTS}")
string(REPLACE "_MAJOR_" "${MAJOR}" FILE_CONTENTS "${FILE_CONTENTS}")
string(REPLACE "_MINOR_" "${MINOR}" FILE_CONTENTS "${FILE_CONTENTS}")
string(REPLACE "_PATCH_" "${PATCH}" FILE_CONTENTS "${FILE_CONTENTS}")
string(REPLACE "_PRODUCT_" "${PRODUCT}" FILE_CONTENTS "${FILE_CONTENTS}")
file(WRITE versioninfo.rc "${FILE_CONTENTS}")

add_library(versioninfo OBJECT "versioninfo.rc")
add_library(icon OBJECT "icon.rc")